# option-strategy-simulator

./: .gitignore  README.md  Usage.md  pyproject.toml
dev/: README_examples.ipynb  greeks_workbook.ipynb  greeks_workbook.py  sample.py  theo_price_workbook.ipynb  theo_price_workbook.py  theo_price_workbook_modular.ipynb
src/option_strategy_sim/: __init__.py  chain_mgr.py  core.py  greeks.py  leg.py  margin.py  plot.py  pnl.py  utils.py
tests/: test_core.py  test_greeks.py  test_leg.py
